# github-security-report-action

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint  AGENTS.md  README.md  REUSE.toml  action.yaml  pyproject.toml
.github/: dependabot.yml
.github/runtime-pin/: requirements.txt
.github/workflows/: build-test-release.yaml  build-test.yaml  clear-action-cache.yaml  openssf-scorecard.yaml  release-drafter.yaml  reporting.yaml  testing.yaml
docs/: BRIEF.md  org-scan-setup.md  phase0-findings.md
docs/adr/: 0001-architecture-and-scope.md  0002-report-metadata-and-footer.md  0003-remediate-subcommand.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: README.md  enable_dependabot_security_updates.py  phase0_capability_spike.py
src/github_security_report/: __init__.py  categories.py  classify.py  cli.py  client.py  collect.py  config.py  gating.py  gitctx.py  models.py  posture.py  py.typed  remediate.py  report.py  rulesets.py  runner.py  scope.py  severity.py
src/github_security_report/render/: __init__.py  html.py  markdown.py  slack.py  terminal.py
src/github_security_report/templates/: index.html.j2  report.html.j2
tests/: conftest.py  test_classify.py  test_cli.py  test_client.py  test_collect.py  test_config.py  test_gating.py  test_gitctx.py  test_models.py  test_posture.py  test_remediate.py  test_render_html.py  test_render_markdown.py  test_render_slack.py  test_render_terminal.py  test_report.py  test_rulesets.py  test_runner.py  test_scope.py  test_severity.py
